Cleanup based on hints