@@ -72,7 +72,7 @@ public class InputDataInterface {
     TextField chosenFileLabel = new TextField();
     TextField chosenXPK2FileLabel = new TextField();
     TextField chosenParamFileLabel = TextFields.createClearableTextField();
-    ComboBox<String> B0fieldChoice = new ComboBox();
+    ComboBox<String> B0fieldChoice = new ComboBox<>();
     TextField tempTextField = new TextField();
     ChoiceBox<String> nucChoice = new ChoiceBox<>();
     TextField pTextField = new TextField();
@@ -86,7 +86,7 @@ public class InputDataInterface {
     CheckBox ppmBox = new CheckBox("ppm to Hz");
     ChoiceBox<String> errModeChoice = new ChoiceBox<>();
     TextField errPercentTextField = new TextField();
-    ArrayList<HashMap<String, Object>> dataList = new ArrayList();
+    List<HashMap<String, Object>> dataList = new ArrayList<>();
     Button dirChoiceButton = new Button();
     Button fileChoiceButton = new Button();
     Button xpk2ChoiceButton = new Button();
@@ -109,14 +109,13 @@ public class InputDataInterface {
     public void createPeakListInterface() {
         infoStage.setTitle("Load from Peak Lists");
         inputInfoDisplay.getChildren().clear();
-        int row = 0;
         List<PeakList> peakLists = new ArrayList<>();
         List<ChoiceBox<String>> choices = new ArrayList<>();
         PeakList.peakLists().forEach(peakList -> {
             if (peakList.hasMeasures()) {
                 Label peakListLabel = new Label(peakList.getName());
                 peakLists.add(peakList);
-                ChoiceBox<String> typeChoice = new ChoiceBox();
+                ChoiceBox<String> typeChoice = new ChoiceBox<>();
                 choices.add(typeChoice);
                 typeChoice.getItems().addAll(Arrays.asList("", "R1", "R2", "NOE","RAP","RQ"));
                 inputInfoDisplay.add(peakListLabel,0,choices.size()-1);
@@ -187,11 +186,10 @@ public class InputDataInterface {
             tauLabel, B1FieldLabel, nucLabel, errModeLabel, errPercentLabel, xValLabel, delayLabel, yValLabel, yamlLabel};
 
         dirChoiceButton.setText("Browse");
-        dirChoiceButton.setOnAction(e -> chooseDirectory(e));
+        dirChoiceButton.setOnAction(this::chooseDirectory);
         chosenDirLabel.setText("");
 
-//        Button fileChoiceButton = new Button();
-        fileChoiceButton.setOnAction(e -> chooseFile(e));
+        fileChoiceButton.setOnAction(this::chooseFile);
         fileChoiceButton.setText("Browse");
         chosenFileLabel.setText("");
         chosenFileLabel.setStyle("-fx-control-inner-background: red;");
@@ -205,8 +203,7 @@ public class InputDataInterface {
 
         });
 
-//        Button xpk2ChoiceButton = new Button();
-        xpk2ChoiceButton.setOnAction(e -> chooseXPK2File(e));
+        xpk2ChoiceButton.setOnAction(this::chooseXPK2File);
         xpk2ChoiceButton.setText("Browse");
         chosenXPK2FileLabel.setText("");
         chosenXPK2FileLabel.setStyle("-fx-control-inner-background: red;");
@@ -220,8 +217,7 @@ public class InputDataInterface {
 
         });
 
-//        Button paramFileChoiceButton = new Button();
-        paramFileChoiceButton.setOnAction(e -> chooseParamFile(e));
+        paramFileChoiceButton.setOnAction(this::chooseParamFile);
         paramFileChoiceButton.setText("Browse");
         chosenParamFileLabel.setText("");
         chosenParamFileLabel.setStyle("-fx-control-inner-background: red;");
@@ -271,17 +267,13 @@ public class InputDataInterface {
                 "CPMG", "CEST", "R1RHO","RAP","RQ"));
         fitModeChoice.setValue("Select");
 
-        fitModeChoice.valueProperty().addListener(x -> {
-            updateInfoInterface();
-        });
+        fitModeChoice.valueProperty().addListener(x -> updateInfoInterface());
 
         peakListChoice.getItems().clear();
         peakListChoice.getItems().add("");
-        PeakList.peakLists().stream().forEach(p -> peakListChoice.getItems().add(p.getName()));
+        PeakList.peakLists().forEach(p -> peakListChoice.getItems().add(p.getName()));
         peakListChoice.setValue("");
-        peakListChoice.valueProperty().addListener(x -> {
-            updatePeakList();
-        });
+        peakListChoice.valueProperty().addListener(x -> updatePeakList());
 
         formatChoice.getItems().clear();
         formatChoice.getItems().addAll(Arrays.asList("mpk2", "ires", "txt"));
@@ -294,7 +286,7 @@ public class InputDataInterface {
         B0fieldChoice.getItems().clear();
         B0fieldChoice.getItems().addAll(Arrays.asList("400", "475", "500", "600", "700", "750", "800", "900", "950", "1000", "1100", "1200"));
         B0fieldChoice.setValue("");
-        B0fieldChoice.itemsProperty().addListener((observable, oldValue, newValue)
+        B0fieldChoice.valueProperty().addListener((observable, oldValue, newValue)
                 -> {
             if (newValue.equals("")) {
                 tauTextField.setStyle("-fx-control-inner-background: red;");
@@ -304,29 +296,25 @@ public class InputDataInterface {
         });
         B0fieldChoice.setEditable(true);
 
-        EventHandler<ActionEvent> boxevent = new EventHandler<ActionEvent>() {
-
-            public void handle(ActionEvent e) {
-                String[] xvals = xValTextArea.getText().split("\t");
-                ArrayList<Double> fxvals = new ArrayList();
-                String xString = "";
-                if ((fitModeChoice.getSelectionModel().getSelectedItem().equals("CEST") || fitModeChoice.getSelectionModel().getSelectedItem().equals("R1RHO"))
-                        && ppmBox.isSelected()) {
-                    for (int i = 0; i < xvals.length; i++) {
-                        fxvals.add(Double.parseDouble(xvals[i]) * Double.parseDouble(B0fieldChoice.getSelectionModel().getSelectedItem().toString()));
-                        xString += fxvals.get(i).toString() + "\t";
-                    }
-                    xValTextArea.setText(xString);
-                } else if ((fitModeChoice.getSelectionModel().getSelectedItem().equals("CEST") || fitModeChoice.getSelectionModel().getSelectedItem().equals("R1RHO"))
-                        && !ppmBox.isSelected()) {
-                    for (int i = 0; i < xvals.length; i++) {
-                        fxvals.add(Double.parseDouble(xvals[i]) / Double.parseDouble(B0fieldChoice.getSelectionModel().getSelectedItem().toString()));
-                        xString += fxvals.get(i).toString() + "\t";
-                    }
-                    xValTextArea.setText(xString);
+        EventHandler<ActionEvent> boxevent = e -> {
+            String[] xvals = xValTextArea.getText().split("\t");
+            ArrayList<Double> fxvals = new ArrayList<>();
+            StringBuilder xString = new StringBuilder();
+            if ((fitModeChoice.getSelectionModel().getSelectedItem().equals("CEST") || fitModeChoice.getSelectionModel().getSelectedItem().equals("R1RHO"))
+                    && ppmBox.isSelected()) {
+                for (int i = 0; i < xvals.length; i++) {
+                    fxvals.add(Double.parseDouble(xvals[i]) * Double.parseDouble(B0fieldChoice.getSelectionModel().getSelectedItem()));
+                    xString.append(fxvals.get(i).toString()).append("\t");
                 }
+                xValTextArea.setText(xString.toString());
+            } else if ((fitModeChoice.getSelectionModel().getSelectedItem().equals("CEST") || fitModeChoice.getSelectionModel().getSelectedItem().equals("R1RHO"))
+                    && !ppmBox.isSelected()) {
+                for (int i = 0; i < xvals.length; i++) {
+                    fxvals.add(Double.parseDouble(xvals[i]) / Double.parseDouble(B0fieldChoice.getSelectionModel().getSelectedItem()));
+                    xString.append(fxvals.get(i).toString()).append("\t");
+                }
+                xValTextArea.setText(xString.toString());
             }
-
         };
 
         // set event to checkbox 
@@ -339,9 +327,7 @@ public class InputDataInterface {
         xConvChoice.getItems().addAll(Arrays.asList("identity", "tau2", "ppmtohz", "hztoppm", "calc"));
         xConvChoice.setValue("identity");
 
-        xConvChoice.valueProperty().addListener(x -> {
-            updateDelays();
-        });
+        xConvChoice.valueProperty().addListener(x -> updateDelays());
 
         yConvChoice.getItems().addAll(Arrays.asList("identity", "rate", "normalize"));
         yConvChoice.setValue("identity");
@@ -368,8 +354,6 @@ public class InputDataInterface {
         inputInfoDisplay.add(nucChoice, 1, labels.length - 7);
         inputInfoDisplay.add(errModeChoice, 1, labels.length - 6);
         inputInfoDisplay.add(errPercentTextField, 1, labels.length - 5);
-//        inputInfoDisplay.add(xValTextArea, 1, labels.length - 2, 1, 1);
-//        inputInfoDisplay.add(ppmBox, 2, labels.length - 2);
         inputInfoDisplay.add(xConvChoice, 1, labels.length - 4);
         inputInfoDisplay.add(delayBox, 1, labels.length - 3, 2, 1);
         inputInfoDisplay.add(yConvChoice, 1, labels.length - 2);
@@ -379,24 +363,20 @@ public class InputDataInterface {
         chosenXPK2FileLabel.setMaxWidth(200);
         chosenParamFileLabel.setMaxWidth(200);
 
-//        Button addButton = new Button();
-        addButton.setOnAction(e -> addInfo(e));
+        addButton.setOnAction(this::addInfo);
         addButton.setText("Add to Data List");
         inputInfoDisplay.add(addButton, 1, labels.length);
 
-//        Button clearButton = new Button();
-        clearButton.setOnAction(e -> clearDataList(e));
+        clearButton.setOnAction(this::clearDataList);
         clearButton.setText("Clear Data List");
         inputInfoDisplay.add(clearButton, 1, labels.length + 1);
 
-//        Button yamlButton = new Button();
-        yamlButton.setOnAction(e -> makeYAML(e));
+        yamlButton.setOnAction(this::makeYAML);
         yamlButton.setText("Create YAML");
         yamlButton.disableProperty().bind(yamlTextField.textProperty().isEmpty());
         inputInfoDisplay.add(yamlButton, 2, labels.length - 1);
 
-//        Button loadButton = new Button();
-        loadButton.setOnAction(e -> loadInfo(e));
+        loadButton.setOnAction(this::loadInfo);
         loadButton.setText("Load");
         inputInfoDisplay.add(loadButton, 2, labels.length + 1);
 
@@ -418,11 +398,7 @@ public class InputDataInterface {
 
     void updateErrorMode() {
         if ((errModeChoice != null) && (errModeChoice.getValue() != null)) {
-            if (errModeChoice.getValue().equals("replicates") || errModeChoice.getValue().equals("measured")) {
-                errPercentTextField.setDisable(true);
-            } else {
-                errPercentTextField.setDisable(false);
-            }
+            errPercentTextField.setDisable(errModeChoice.getValue().equals("replicates") || errModeChoice.getValue().equals("measured"));
         }
     }
 
@@ -430,8 +406,6 @@ public class InputDataInterface {
         Button[] buttons = {fileChoiceButton, xpk2ChoiceButton, paramFileChoiceButton, addButton, clearButton, loadButton};
         TextField[] textFields = {B1TextField, tauTextField, tempTextField, pTextField,
             errPercentTextField, yamlTextField, chosenFileLabel, chosenXPK2FileLabel, chosenParamFileLabel};
-//                TextField[] textFields = {tempTextField, pTextField,
-//                    errPercentTextField, yamlTextField, chosenFileLabel, chosenXPK2FileLabel, chosenParamFileLabel};
         if (fitModeChoice.getSelectionModel().getSelectedItem() != null) {
             if (fitModeChoice.getSelectionModel().getSelectedItem().equals("Select")) {
                 for (TextField textField : textFields) {
@@ -508,9 +482,9 @@ public class InputDataInterface {
                     tauTextField.setDisable(true);
                     ppmBox.setDisable(true);
                     xConvChoice.getItems().clear();
-                    xConvChoice.getItems().addAll(Arrays.asList("identity"));
+                    xConvChoice.getItems().addAll(List.of("identity"));
                     yConvChoice.getItems().clear();
-                    yConvChoice.getItems().addAll(Arrays.asList("normalize"));
+                    yConvChoice.getItems().addAll(List.of("normalize"));
                     xConvChoice.setValue("identity");
                     yConvChoice.setValue("normalize");
                 } else if ((fitModeChoice.getSelectionModel().getSelectedItem().equals("CEST") || fitModeChoice.getSelectionModel().getSelectedItem().equals("R1RHO"))) {
@@ -625,7 +599,6 @@ public class InputDataInterface {
         String field = Arrays.asList(head.get(3)).get(sfInd);
         String nuc = Arrays.asList(head.get(4)).get(codeInd);
         String nuc1 = nuc.replaceAll("[^a-zA-Z]", "");
-        String nuc2 = nuc.replaceAll("[a-zA-Z]", "");
         nucChoice.setValue(nuc1);
         B0fieldChoice.getSelectionModel().select(field);
     }
@@ -635,8 +608,6 @@ public class InputDataInterface {
         PeakList peakList = PeakList.get(peakListChoice.getValue());
         if (peakList != null) {
             int peakDim = 1;
-            String peakListName = peakList.getName();
-            List<Number> vcpmgList = null;
             String nucleus;
             double B0field;
             double temperature;
@@ -672,10 +643,10 @@ public class InputDataInterface {
     void loadFromPeakList() {
         PeakList peakList = PeakList.get(peakListChoice.getValue());
         String expMode = fitModeChoice.getValue();
-        Double b0Field = Double.parseDouble(B0fieldChoice.getValue());
+        double b0Field = Double.parseDouble(B0fieldChoice.getValue());
         Double temperatureK = getDouble(tempTextField.getText());
         String nucName = nucChoice.getValue();
-        loadFromPeakList(peakList, expMode, nucName, b0Field.doubleValue(), temperatureK.doubleValue());
+        loadFromPeakList(peakList, expMode, nucName, b0Field, temperatureK);
     }
 
     void loadFromPeakList(PeakList peakList, String expMode, String nucName, double b0Field, double temperatureK) {
@@ -778,14 +749,14 @@ public class InputDataInterface {
     }
 
     public void addInfo() {
-        HashMap hm = new HashMap();
+        HashMap<String, Object> hm = new HashMap<>();
         hm.put("file", chosenFileLabel.getText());
 
         hm.put("paramFile", chosenParamFileLabel.getText());
         hm.put("temperature", Double.parseDouble(tempTextField.getText()));
         hm.put("xconv", xConvChoice.getSelectionModel().getSelectedItem());
         hm.put("yconv", yConvChoice.getSelectionModel().getSelectedItem());
-        hm.put("B0", Double.parseDouble(B0fieldChoice.getSelectionModel().getSelectedItem().toString()));
+        hm.put("B0", Double.parseDouble(B0fieldChoice.getSelectionModel().getSelectedItem()));
         hm.put("nucleus", nucChoice.getSelectionModel().getSelectedItem().replaceAll("[^a-zA-Z]", ""));
         if (!tauTextField.isDisabled()) {
             hm.put("tau", Double.parseDouble(tauTextField.getText()));
@@ -796,12 +767,12 @@ public class InputDataInterface {
         if (!B1TextField.isDisabled()) {
             hm.put("B1", Double.parseDouble(B1TextField.getText()));
         }
-        HashMap hmde = new HashMap();
+        HashMap<String, java.io.Serializable> hmde = new HashMap<>();
         hmde.put("mode", errModeChoice.getValue());
         if (!errModeChoice.getValue().equals("replicates") && !errModeChoice.getValue().equals("measured")) {
             hmde.put("value", Double.parseDouble(errPercentTextField.getText()));
         }
-        HashMap hmdd = new HashMap();
+        HashMap<String, Double> hmdd = new HashMap<String, Double>();
         if (!delayC0TextField.getText().equals("") && !delayDeltaTextField.getText().equals("") && !delayDelta0TextField.getText().equals("")) {
             hmdd.put("c0", Double.parseDouble(delayC0TextField.getText()));
             hmdd.put("delta0", Double.parseDouble(delayDelta0TextField.getText()));
@@ -815,7 +786,7 @@ public class InputDataInterface {
 
         String[] xvals = xValTextArea.getText().trim().split("\t");
         if (xvals.length > 0) {
-            ArrayList<Double> fxvals = new ArrayList();
+            ArrayList<Double> fxvals = new ArrayList<>();
             try {
                 for (String xval : xvals) {
                     fxvals.add(Double.parseDouble(xval));
@@ -826,11 +797,6 @@ public class InputDataInterface {
             hm.put("vcpmg", fxvals);
         }
         dataList.add(hm);
-//        String fileTail = chosenFileLabel.getText().substring(0, chosenFileLabel.getText().lastIndexOf('.'));
-//        yamlTextField.setText(fileTail + ".yaml");
-//        for (int i=0; i<dataList.size(); i++) {
-//            System.out.println("dataList " + i + " " + dataList.get(i));
-//        }
     }
 
     public void makeYAML(ActionEvent event) {
@@ -844,14 +810,14 @@ public class InputDataInterface {
     public void makeYAML(List data) {
         HashMap hm1 = new HashMap();
         HashMap hm2 = new HashMap();
-        ArrayList<HashMap<String, Object>> dataHmList = new ArrayList();
+        List<HashMap<String, Object>> dataHmList = new ArrayList<>();
 
-        for (int i = 0; i < data.size(); i++) {
-            HashMap hmdf = (HashMap) data.get(i);
+        for (Object datum : data) {
+            HashMap hmdf = (HashMap) datum;
             HashMap hmd = new HashMap(hmdf);
 
             String paramFile = (String) hmdf.get("paramFile");
-            String paramFileName = paramFile.substring(paramFile.lastIndexOf("/") + 1, paramFile.length());
+            String paramFileName = paramFile.substring(paramFile.lastIndexOf("/") + 1);
             hm2.put("mode", hmdf.get("fitmode"));
             if (!paramFileName.equals("")) {
                 hm2.put("file", paramFileName);
@@ -911,7 +877,7 @@ public class InputDataInterface {
         File projectDirFile = new File(chosenDirLabel.getText().trim());
         dirPath = projectDirFile.toPath();
 
-        ExperimentSet resProp = null;
+        ExperimentSet resProp;
         String expMode = fitModeChoice.getSelectionModel().getSelectedItem().toLowerCase();
         resProp = new ExperimentSet(projectName, projectDirFile.toString());
         expMode = expMode.toLowerCase();
